[gd_scene load_steps=4 format=2]

[ext_resource path="res://efx/resources/spotlight_1.png" type="Texture" id=1]
[ext_resource path="res://map/scenes/decorations/fire_flies.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="FireFlies" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.12549, 0.745098, 0.14902, 0.654902 )
material = SubResource( 1 )
position = Vector2( 1.6, -0.4 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="GreenLight" type="Sprite" parent="."]
modulate = Color( 0.188235, 0.878431, 0.215686, 0.396078 )
material = SubResource( 1 )
position = Vector2( 1.6, -0.4 )
scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="LightTimer" type="Timer" parent="."]
one_shot = true

[node name="MovingTimer" type="Timer" parent="."]
one_shot = true
